contact & about page added and some more features

--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -306,6 +306,8 @@
               <ul>
                 <li><a class="active" href="/">Home <i class="fi-rs-angle"></i></a>
                 <li><a href="/shop">Shop <i class="fi-rs-angle"></i></a>
+                  <li><a href="/contact-us">Contact Us <i class="fi-rs-angle"></i></a>
+                    <li><a href="/about-us">About Us <i class="fi-rs-angle"></i></a>
                   <!-- <ul class="sub-menu">
                       <li><a href="shop-grid-right.html">Shop Grid – Right Sidebar</a></li>
                       <li><a href="shop-grid-left.html">Shop Grid – Left Sidebar</a></li>
