--- a/views/partials/userFooter.ejs
+++ b/views/partials/userFooter.ejs
@@ -7,7 +7,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="widget-about font-md mb-md-5 mb-lg-0">
             <div class="logo logo-width-1 wow fadeIn animated">
-              <a href="index.html"><img src="/frontEnd/imgs/theme/newlogo.png" alt="logo"></a>
+              <a href="/"><img src="/frontEnd/imgs/theme/newlogo.png" alt="logo"></a>
             </div>
             <h5 class="mt-20 mb-10 fw-600 text-grey-4 wow fadeIn animated">Contact</h5>
             <p class="wow fadeIn animated">
@@ -32,23 +32,20 @@
         <div class="col-lg-2 col-md-3">
           <h5 class="widget-title wow fadeIn animated">About</h5>
           <ul class="footer-list wow fadeIn animated mb-sm-5 mb-md-0">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Delivery Information</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms &amp; Conditions</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Support Center</a></li>
+            <li><a href="/about-us">About Us</a></li>
+            <li><a href="/privacy-policy">Privacy Policy</a></li>
+            <li><a href="/terms-&-conditions">Terms &amp; Conditions</a></li>
+            <li><a href="/contact-us">Contact Us</a></li>
           </ul>
         </div>
         <div class="col-lg-2  col-md-3">
           <h5 class="widget-title wow fadeIn animated">My Account</h5>
           <ul class="footer-list wow fadeIn animated">
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#">View Cart</a></li>
-            <li><a href="#">My Wishlist</a></li>
-            <li><a href="#">Track My Order</a></li>
-            <li><a href="#">Help</a></li>
-            <li><a href="#">Order</a></li>
+            <li><a href="/get-profile">Profile</a></li>
+            <li><a href="/signup">Sign In</a></li>
+            <li><a href="/cart-list">View Cart</a></li>
+            <li><a href="/wish-list">My Wishlist</a></li>
+            <li><a href="/contact-us">Help</a></li>
           </ul>
         </div>
         <div class="col-lg-4">
@@ -75,15 +72,7 @@
       <div class="col-12 mb-20">
         <div class="footer-bottom"></div>
       </div>
-      <div class="col-lg-6">
-        <p class="float-md-left font-sm text-muted mb-0">&copy; 2021, <strong class="text-brand">Evara</strong> - HTML Ecommerce Template </p>
-      </div>
-      <div class="col-lg-6">
-        <p class="text-lg-end text-start font-sm text-muted mb-0">
-          Designed by <a href="http://alithemes.com/" target="_blank">Alithemes.com</a>. All rights
-          reserved
-        </p>
-      </div>
+      
     </div>
   </div>
 </footer>
