--- a/views/admin/couponList.ejs
+++ b/views/admin/couponList.ejs
@@ -9,9 +9,9 @@
           <header class="border-bottom mb-4 pb-4">
             <div class="row">
               <div class="col-lg-5 col-6">
-                <div class="input-group">
+                <!-- <div class="input-group">
                   <input type="text" placeholder="Search..." class="form-control">
-                </div>
+                </div> -->
               </div>
               <div class="col-lg-5 col-6 d-flex justify-content-end">
                 <button class="btn btn-primary btn-lg btn-block ml-50px" onclick="location.href='/admin/add-coupon';">
