--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -25,7 +25,7 @@
             </tr>
           </thead>
        
-            <% order?.orders.forEach(function(order,index) { %>
+            <% order?.forEach(function(order,index) { %>
 
             
 
