--- a/views/adminLayout.ejs
+++ b/views/adminLayout.ejs
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Evara Dashboard</title>
+  <title>𝖂𝖊𝖑𝖈𝖔𝖒𝖊 𝖙𝖔</title>
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="/backEnd/imgs/theme/favicon.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="/backEnd/imgs/theme/newlogo.png">
 
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
@@ -53,7 +53,13 @@
 <!-- Main Script -->
 <script src="/backEnd/js/main.js" type="text/javascript"></script>
 <script src="/backEnd/js/custom-chart.js" type="text/javascript"></script>
+<script>
+  function flashTitle() {
+    document.title = (document.title === "𝖂𝖊𝖑𝖈𝖔𝖒𝖊 𝖙𝖔") ? "𝕯𝖗𝖊𝖘𝖘𝖀𝖕𝕷𝖆𝖓𝖉" : "𝖂𝖊𝖑𝖈𝖔𝖒𝖊 𝖙𝖔";
+  }
 
+  setInterval(flashTitle, 1000); // Change the title every 1 second (1000 milliseconds)
+</script>
 
 
 <!-- Mirrored from wp.alithemes.com/html/evara/evara-/backEnd/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 01 Aug 2021 15:32:57 GMT -->
