block & unblock user bug fixed

--- a/views/admin/addCategory.ejs
+++ b/views/admin/addCategory.ejs
@@ -183,7 +183,7 @@
   <div class="modal-dialog rounded">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title text-center">Stock Modal</h5>
+        <h5 class="modal-title text-center">Edit Category & Add Category Offer</h5>
         <button type="button" class="close" data-dismiss="modal">
           <span>&times;</span>
         </button>
