--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -10,20 +10,20 @@
               <div class="row mb-50">
                 <div class="col-md-6 col-sm-12 col-xs-12">
                   <div class="detail-gallery">
-                    <span class="zoom-icon"><i class="fi-rs-search"></i></span>
+                    <span class="zoom-icon"></span>
                     <!-- MAIN SLIDES -->
                     <div class="product-image-slider">
                       <figure class="border-radius-10">
-                        <img class="default-img" src="/productImages/<%=product.img[0] %>" alt="">
+                        <img class="default-img" style="object-fit:contain;" src="/productImages/<%=product.img[0] %>" alt="">
                       </figure>
                       <figure class="border-radius-10">
-                        <img src="/productImages/<%=product.img[1] %>" alt="product image">
+                        <img style="object-fit:cover;" src="/productImages/<%=product.img[1] %>" alt="product image">
                       </figure>
                       <figure class="border-radius-10">
-                        <img src="/productImages/<%=product.img[2] %>" alt="product image">
+                        <img style="object-fit:cover;" src="/productImages/<%=product.img[2] %>" alt="product image">
                       </figure>
                       <figure class="border-radius-10">
-                        <img src="/productImages/<%=product.img[3] %>" alt="product image">
+                        <img style="object-fit:cover;" src="/productImages/<%=product.img[3] %>" alt="product image">
                       </figure>
 
 
